the loader text stopped working correctly after the last commit. I corrected it, needed a text align center setting.

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
   color: white;
 }
 
+.loader {
+  text-align: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .loader {
     animation: loader-spin infinite 25s linear;
